# cpp-kata

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
alignedMalloc/inc/: alignedMalloc.h
alignedMalloc/src/: alignedMalloc.c  testAlignedMalloc.cpp
customSmartPtr/inc/: customSmartPtr.hpp
customSmartPtr/src/: testCustomSmartPtr.cpp
moveOnlyBuffer/inc/: moveOnlyBuffer.hpp
moveOnlyBuffer/test/: testMoveOnlyBuffer.cpp
registerLock/inc/: registerLock.hpp
registerLock/src/: testRegisterLock.cpp
ringBuffer/inc/: RingBuffer.h
ringBuffer/src/: RingBuffer.c  testRingBuffer.cpp
xconcurrency/inc/: threadPool.hpp
xconcurrency/src/: threadPool.cpp
